examples/test/testpolicy5040.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5040
  namespace: namespace44
spec:
  podSelector:
    matchLabels:
      key43: value44
      key35: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value22
      podSelector:
        matchLabels:
          key12: value8
          key20: value17
